<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    android:padding="32dp"
    >

    <com.google.android.material.textview.MaterialTextView
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        />
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:entries="@array/genders"
        android:id="@+id/genders_spinner"
        android:layout_marginBottom="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.IdealWeight.TextInputLayout"
        android:id="@+id/height_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/height_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:imeOptions="actionDone"
            android:inputType="numberSigned|numberDecimal"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.IdealWeight.TextInputLayout"
        android:id="@+id/weight_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_text_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculation_mode"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"

        />

    <RadioGroup
        android:id="@+id/calculate_mode_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checkedButton="@id/height_mode"
        >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/height_mode"
            android:id="@+id/height_mode"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bmi_mode"
            android:id="@+id/BMI_mode"
            />

    </RadioGroup>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/result_text_sample"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/calculate_button"
        />

</LinearLayout>